* lisp/dired-aux.el (dired-diff): Add (require 'diff) because `diff-latest-backup-file' is not autoloaded. (dired-do-chxxx, dired-do-chmod): Set `no-error-if-not-filep' arg of `dired-get-filename' to t to not report error when there is no default file on the current line.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,11 @@
+2012-09-19  Juri Linkov  <juri@jurta.org>
+
+	* dired-aux.el (dired-diff): Add (require 'diff) because
+	`diff-latest-backup-file' is not autoloaded.
+	(dired-do-chxxx, dired-do-chmod): Set `no-error-if-not-filep' arg
+	of `dired-get-filename' to t to not report error when there is
+	no default file on the current line.
+
 2012-09-19  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/macroexp.el (macroexp--funcall-if-compiled): Rename from
