--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,9 @@
 2012-09-19  Paul Eggert  <eggert@cs.ucla.edu>
 
+	* w32inevt.c (w32_console_read_socket): Return -1 on failure, not 0.
+	Ignore 'expected'. See Eli Zaretskii in
+	<http://bugs.gnu.org/12471#8> (last line).
+
 	* frame.c (read_integer): Remove.  All uses replaced by strtol/strtoul.
 	(XParseGeometry): Now static.  Substitute extremal values for
 	values that are out of range.
