--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,12 @@
+2012-09-20  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* alloc.c (mark_object) <PVEC_WINDOW>: Mark prev/next_buffers *after*
+	calling mark_vectorlike since that's the one that marks the window.
+	(mark_discard_killed_buffers): Mark the final cdr.
+	* window.h (struct window): Move prev/next_buffers to the
+	non-standard fields.
+	* window.c (make_window): Initialize prev/next_buffers manually.
+
 2012-09-20  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Omit unused arg EXPECTED from socket hooks.
