--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-09-20  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>
+
+	* unexmacosx.c: Define LC_DATA_IN_CODE if not defined.
+	(print_load_command_name): Add case LC_DATA_IN_CODE.
+	(dump_it) [LC_DATA_IN_CODE]: Call copy_linkedit_data.
+
 2012-09-18  Glenn Morris  <rgm@gnu.org>
 
 	* eval.c (Frun_hook_with_args_until_success)
