* lisp/replace.el (query-replace-read-from): Use `read-regexp' instead of `read-from-minibuffer' when `regexp-flag' is non-nil. (occur-read-primary-args): Use `read-regexp' instead of `read-string'. (multi-occur-in-matching-buffers): Use `read-regexp' instead of `read-from-minibuffer'. * lisp/isearch.el (isearch-occur): Use `read-regexp' instead of `read-string'. * lisp/dired.el (dired-read-regexp): Use `read-regexp' instead of `read-from-minibuffer'. * lisp/progmodes/grep.el (grep-read-regexp): Use `read-regexp' instead of `read-string'.

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -750,6 +750,14 @@ in Emacs 24.1:
 **** `special-display-function'
 **** `display-buffer-function'
 
+** Minibuffer
+
+*** `read-regexp' has a new argument HISTORY; the first argument PROMPT
+of `read-regexp' accepts a string ending with a colon and space, and its
+second argument DEFAULTS can be a list of strings accessible via M-n
+in the minibuffer ahead of other hard-coded useful regexp-related values.
+More commands use `read-regexp' now to read their regexp arguments.
+
 ** Completion
 
 *** New function `completion-table-with-quoting' to handle completion
