--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-22  Kenichi Handa  <handa@gnu.org>
+
+	* composite.c (composition_reseat_it): Handle the case that a
+	grapheme cluster is not covered by a single font (Bug#12352).
+
 2012-09-17  Kenichi Handa  <handa@gnu.org>
 
 	* font.c (Ffont_shape_gstring): Fix previous change; GLYPHs may
