--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-09-22  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* emacs.c (shut_down_emacs): Don't assume stderr is buffered,
+	or that fprintf is async-signal-safe.  POSIX doesn't require
+	either assumption.
+
 2012-09-22  Chong Yidong  <cyd@gnu.org>
 
 	* buffer.c (Fset_buffer_modified_p): Handle indirect buffers
