Fix bug #10159 with crashes in auto-complete package.
 src/xdisp.c (next_overlay_string): Initialize it->end_charpos for
 the new overlay string.  Otherwise, the call to composition_compute_stop_pos
 in compute_stop_pos uses a wrong it->end_charpos value, and crashes because
 it runs off the end of the overlay string.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-22  Eli Zaretskii  <eliz@gnu.org>
+
+	* xdisp.c (next_overlay_string): Initialize it->end_charpos for
+	the new overlay string.  (Bug#10159)
+
 2012-09-22  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* emacs.c (shut_down_emacs): Don't assume stderr is buffered,
