--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-22  Eli Zaretskii  <eliz@gnu.org>
+
+	* os.texi (Idle Timers): Warn against reinvoking an idle timer
+	from within its own timer action.  (Bug#12447)
+
 2012-09-22  Chong Yidong  <cyd@gnu.org>
 
 	* frames.texi (Pop-Up Menus): Minor clarification (Bug#11148).
