--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-09-22  Eli Zaretskii  <eliz@gnu.org>
+
+	* emacs-lisp/timer.el (run-with-idle-timer)
+	(timer-activate-when-idle): Warn against reinvoking an idle timer
+	from within its own timer action.  (Bug#12447)
+
 2012-09-22  Martin Rudalics  <rudalics@gmx.at>
 
 	* cus-start.el (window-combination-limit): Add new optional
