--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,5 +1,7 @@
 2012-09-22  Eli Zaretskii  <eliz@gnu.org>
 
+	* edebug.texi (Instrumenting): Improve indexing.
+
 	* os.texi (Idle Timers): Warn against reinvoking an idle timer
 	from within its own timer action.  (Bug#12447)
 
