--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,21 @@
+2012-09-22  Chong Yidong  <cyd@gnu.org>
+
+	* dispextern.h (struct image_type): Add new slot, storing a type
+	initialization function.
+
+	* image.c (define_image_type): Call the image initializer function
+	if it is defined.  Arguments and return value changed.
+	(valid_image_p, make_image): Callers changed.
+	(xbm_type, xpm_type, pbm_type, png_type, jpeg_type, tiff_type)
+	(gif_type, imagemagick_type, svg_type, gs_type): Add
+	initialization functions.
+	(Finit_image_library): Call lookup_image_type.
+	(CHECK_LIB_AVAILABLE): Macro deleted.
+	(lookup_image_type): Call define_image_type here, rather than via
+	Finit_image_library, and without using CHECK_LIB_AVAILABLE.
+	(syms_of_image): Move define_image_type calls for xbm_type and
+	pbm_type to lookup_image_type.
+
 2012-09-22  Eli Zaretskii  <eliz@gnu.org>
 
 	* keyboard.c (timer_check_2): Move calculation of 'timers' and
