Misc doc fixes.
* searching.texi (Replacing Match): Minor clarification.

* lisp/repeat.el (repeat): Doc fix.

* lisp/simple.el (shell-command-on-region): Doc fix.

* lisp/emacs-lisp/easy-mmode.el (define-minor-mode): Doc fix.

* cmds.c (Fforward_char, Fbackward_char): Doc fix.

* editfns.c (Fline_beginning_position): Doc fix.
(Fline_end_position): Doc fix.

* minibuf.c (Finternal_complete_buffer): Doc fix.

* search.c (Freplace_match): Doc fix.

--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-22  Chong Yidong  <cyd@gnu.org>
+
+	* searching.texi (Replacing Match): Minor clarification.
+
 2012-09-22  Eli Zaretskii  <eliz@gnu.org>
 
 	* edebug.texi (Instrumenting): Improve indexing.
