--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,12 @@
+2012-09-22  Chong Yidong  <cyd@gnu.org>
+
+	* repeat.el (repeat): Doc fix (Bug#12348).
+
+	* emacs-lisp/easy-mmode.el (define-minor-mode): Doc fix
+	(Bug#10909).
+
+	* simple.el (shell-command-on-region): Doc fix.
+
 2012-09-22  Eli Zaretskii  <eliz@gnu.org>
 
 	* emacs-lisp/timer.el (run-with-idle-timer)
