--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-09-22  Martin Rudalics  <rudalics@gmx.at>
+
+	* subr.el (temp-output-buffer-show): New function.
+	(with-output-to-temp-buffer): Call temp-output-buffer-show
+	instead of internal-temp-output-buffer-show.
+
 2012-09-22  Chong Yidong  <cyd@gnu.org>
 
 	* files.el (ctl-x-map): Bind C-x C-q to read-only-mode
