--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-22  Juri Linkov  <juri@jurta.org>
+
+	* dired.el (dired-mode-map): Add [remap read-only-mode] for
+	`dired-toggle-read-only'.  (Bug#12462)
+
 2012-09-22  Martin Rudalics  <rudalics@gmx.at>
 
 	* subr.el (temp-output-buffer-show): New function.
