--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-23  Jan Djärv  <jan.h.d@swipnet.se>
+
+	* nsterm.m (ns_dumpglyphs_image): dr is a new rect to draw image into,
+	background rect may be larger (Bug#12445).
+
 2012-09-23  Chong Yidong  <cyd@gnu.org>
 
 	* keyboard.c (timer_check): Avoid quitting during Fcopy_sequence.
